# ipy-opengl-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo_notebook.ipynb
ipy_opengl_utils/: __init__.py  base_opengl_widget.py  camera.py  math_utils.py  mesh_utils.py  opengl_utils.py  particle_widget.py  shader_utils.py  texture_utils.py
ipy_opengl_utils/shaders/: fragment_shader.glsl  line_fragment_shader.glsl  line_vertex_shader.glsl  vertex_shader.glsl
